# isolate

./: .gitignore  Makefile  Makefile.am  PKGBUILD  README.md  configure.ac  isolate.cf.in  isolate.pc.in
.github/workflows/: release.yml
examples/: test.c
include/: Makefile.am  isolate.h
src/: cg.c  config.c  isolate.c  rules.c  util.c
